[gd_scene load_steps=6 format=2]

[ext_resource path="res://interface/bold_text.tscn" type="PackedScene" id=1]
[ext_resource path="res://interface/text.tscn" type="PackedScene" id=2]
[ext_resource path="res://end.gd" type="Script" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]

[sub_resource type="Animation" id=1]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="end" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="event_timer" type="Timer" parent="."]
one_shot = true

[node name="margin" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="story" type="VBoxContainer" parent="margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 700.0
custom_constants/separation = 10

[node name="title" parent="margin/story" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1240.0
margin_bottom = 24.0
label = "Time to go home..."
delay = 0.5
speed = 0.5

[node name="result" parent="margin/story" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 34.0
margin_right = 1240.0
margin_bottom = 46.0
label = " -"
delay = 1.0
speed = 0.5
auto_play = false

[node name="feeling" parent="margin/story" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 1240.0
margin_bottom = 68.0
label = " -"
delay = 1.0
speed = 0.5
auto_play = false

[node name="spring2" type="Control" parent="margin/story"]
margin_top = 78.0
margin_right = 1240.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 10 )

[node name="text" parent="margin/story" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 98.0
margin_right = 1240.0
margin_bottom = 110.0
label = "Your Outcomes"

[node name="cards" type="HBoxContainer" parent="margin/story"]
margin_top = 120.0
margin_right = 1240.0
margin_bottom = 120.0
custom_constants/separation = 5

[node name="spring" type="Control" parent="margin/story"]
margin_top = 130.0
margin_right = 1240.0
margin_bottom = 145.0
rect_min_size = Vector2( 0, 15 )

[node name="restart" type="Button" parent="margin/story"]
margin_top = 155.0
margin_right = 1240.0
margin_bottom = 167.0
disabled = true
text = "Restart"
align = 0

[node name="quit" type="Button" parent="margin/story"]
margin_top = 177.0
margin_right = 1240.0
margin_bottom = 189.0
disabled = true
text = "Quit"
align = 0

[node name="fade" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )

[node name="input_timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="margin/story/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="margin/story/quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="input_timer" to="." method="_on_input_timer_timeout"]
